--- a/resources/views/landing.edge
+++ b/resources/views/landing.edge
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>LabMC</title>
   @entryPointStyles('app')
   @entryPointScripts('app')
 </head>
 
 <body>
-  <main class="container">
-    @include('partials/sidebar')
-    @include('partials/header')
+  <main>
+    <header>
 
-    <section class="main-content">
-      @!section('main')
+      <section class="links">
+        <a href="">Home</a>
+        <a href="">LabMC</a>
+      </section>
+    </header>
+    <section class="banner">
     </section>
   </main>
-  <script src="https://unpkg.com/feather-icons"></script>
-  <script>
-    feather.replace()
-  </script>
 </body>
 
 </html>
