--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -169,6 +169,99 @@ section.content {
   margin: 2rem;
 }
 
+/* LANDINGPAGE */
+header.landing-header {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #071e02;
+  position: sticky;
+  top: 0;
+}
+
+.banner {
+  width: 100%;
+  height: 570px;
+  background-image: url(../../public/images/waves-bg.png),
+    linear-gradient(180deg, #071e02 0.52%, #045603 100%);
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+
+  display: flex;
+  flex-direction: column;
+  color: #f9f9f9;
+  justify-content: center;
+  padding: 2rem;
+}
+
+.banner h1 {
+  font-size: 3rem;
+}
+
+.landing-section {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.landing-info {
+  display: flex;
+}
+
+.landing-section-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+  background-color: #045603;
+  color: #071e02;
+}
+
+.links {
+  display: flex;
+  gap: 1rem;
+}
+a.link {
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+}
+
+/* DROPDOWN MENU */
+.dropdown {
+  position: relative;
+}
+
+.dropdown button {
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  color: #fff;
+}
+
+.dropdown:hover .menu {
+  display: block;
+}
+
+.menu {
+  position: absolute;
+  display: none;
+
+  background-color: #f9f9f9;
+  right: 0;
+  transition: all 3s;
+  font-size: 14px;
+  padding: 0.5rem;
+}
+
 @media (min-width: 900px) {
   .card-container {
     flex-direction: row;
