--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -180,9 +180,13 @@ header.landing-header {
   top: 0;
 }
 
+img.logo {
+  width: 70px;
+}
+
 .banner {
   width: 100%;
-  height: 570px;
+  height: 400px;
   background-image: url(../../public/images/waves-bg.png),
     linear-gradient(180deg, #071e02 0.52%, #045603 100%);
   background-size: cover;
@@ -192,38 +196,47 @@ header.landing-header {
   display: flex;
   flex-direction: column;
   color: #f9f9f9;
-  justify-content: center;
+  justify-content: flex-end;
   padding: 2rem;
 }
 
 .banner h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .landing-section {
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  gap: 1rem;
 }
 
 .landing-info {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .landing-section-center {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   flex-direction: column;
   padding: 2rem;
   background-color: #045603;
-  color: #071e02;
+  color: #f9f9f9;
+  gap: 1rem;
+}
+
+.landing-text {
+  text-align: center;
 }
 
 .links {
   display: flex;
   gap: 1rem;
 }
+
 a.link {
   color: #fff;
   text-decoration: none;
@@ -231,6 +244,25 @@ a.link {
   justify-content: center;
   align-items: center;
   font-size: 14px;
+}
+
+.area-cards {
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+}
+
+.area-card {
+  background: #f9f9f9;
+  color: #071e02;
+  padding: 1rem;
+  font-size: 14px;
+}
+
+.map {
+  width: 100%;
+  height: 300px;
+  border: none;
 }
 
 /* DROPDOWN MENU */
@@ -283,5 +315,21 @@ a.link {
   header.main-header,
   .main-content {
     margin-left: 200px;
+  }
+
+  .banner {
+    height: 570px;
+  }
+
+  .area-cards {
+    flex-direction: row;
+  }
+
+  .area-card {
+    max-width: 300px;
+  }
+
+  .landing-text {
+    font-size: 22px;
   }
 }
