--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,6 +33,11 @@ main.container {
   align-items: center;
 }
 
+/* ICONS */
+.feather-16 {
+  width: 16px;
+}
+
 /* LOGIN */
 main.login-container {
   height: 100%;
@@ -266,32 +271,130 @@ a.link {
 }
 
 /* DROPDOWN MENU */
-.dropdown {
+.menu {
+  color: #fff;
   position: relative;
 }
 
-.dropdown button {
-  border: none;
+.menu ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.menu li {
+  position: relative;
+  white-space: nowrap;
+  cursor: pointer;
+  list-style: none;
+}
+
+.menu li:hover > a {
+  color: #1ea71c;
+}
+
+.menu ul li.main-menu {
+  display: inline-table;
+}
+
+.menu .main-menu ul {
+  display: none;
+  position: absolute;
+  background-color: #045603;
+  padding: 1rem;
+}
+
+.menu .main-menu a {
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.menu li:hover > ul {
+  display: table;
+}
+
+.menu ul.sub-menu {
+  right: 0;
+  top: 100%;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.menu ul.sub-menu .sub-menu {
+  top: -0.5em;
+  right: 100%;
+}
+
+/* LIST MEMBERS */
+.content {
+  padding: 2rem;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+.card-member {
+  background: #fff;
+  box-shadow: var(--box-shadow);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.flex-align-center {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: transparent;
+  gap: 0.5rem;
+}
+
+.icon-img {
+  width: 24px;
+}
+
+.avatar {
+  border-radius: 50%;
+  padding: 1rem 1.3rem;
+  background-image: linear-gradient(180deg, #071e02 0.52%, #045603 100%);
+}
+
+.feather-28 {
+  width: 48px;
+  height: 48px;
+}
+
+.feather-white {
   color: #fff;
 }
 
-.dropdown:hover .menu {
-  display: block;
+.feather-green {
+  color: #045603;
 }
 
-.menu {
-  position: absolute;
-  display: none;
+.text-gray {
+  color: #46444c94;
+}
 
-  background-color: #f9f9f9;
-  right: 0;
-  transition: all 3s;
-  font-size: 14px;
-  padding: 0.5rem;
+.text-center {
+  text-align: center;
+}
+
+.text-green {
+  color: #045603;
+}
+
+.bold-500 {
+  font-weight: 500;
 }
 
 @media (min-width: 900px) {
