--- a/resources/views/landingpage/members.edge
+++ b/resources/views/landingpage/members.edge
@@ -3,7 +3,7 @@
 @section('container')
 <div class="content">
 
-  <h1>{{type}}</h1>
+  <h3 class="section-title">{{translatedType}}</h3>
 
   <section class="grid">
     @each(member in members)
