--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -401,6 +401,50 @@ a.link {
   font-weight: 500;
 }
 
+.bold-600 {
+  font-weight: 600;
+}
+
+/* ORIENTATIONS */
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.icon-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.icon-container-info {
+  font-size: 14px;
+  text-transform: capitalize;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.status-container {
+  width: fit-content;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  border-radius: 1.5rem;
+  display: flex;
+  align-self: flex-end;
+  margin-top: 0.5rem;
+}
+
+.status-container.completed {
+  background-color: #c5edac;
+  color: #045603;
+}
+
+.status-container.not-completed {
+  background-color: #ffbe697e;
+  color: #ff9914;
+}
+
 @media (min-width: 900px) {
   .card-container {
     flex-direction: row;
