--- a/resources/views/landingpage/home.edge
+++ b/resources/views/landingpage/home.edge
@@ -9,7 +9,9 @@
 
 <section class="landing-section">
   <h2>Conheça o LabMC</h2>
-  <div>
+  <div class="section-content">
+
+    <img class="photo" src="/images/400x300.png" alt="foto-labmc">
 
     <p class="landing-text">
       O Laboratório de Modelagem Computacional (LabMC), vinculado ao
@@ -19,14 +21,12 @@
     </p>
 
   </div>
-  {{-- FOTOS DO LABMC --}}
 </section>
-
 
 <section class="landing-section-center">
   <h2>Áreas de pesquisa</h2>
 
-  <p class="landing-text">O laboratório fornece recursos computacionais necessários às disciplinas do PC&T e
+  <p class="landing-text">Fornece recursos computacionais necessários às disciplinas do PC&T e
     demais
     programas do IEG e ao
     desenvolvimento de projetos de ensino, pesquisa e extensão.</p>
@@ -44,20 +44,43 @@
       <p>Processamento em paralelo através da API CUDA, da NVIDIA</p>
     </div>
   </div>
-
 </section>
 
 <section class="landing-section">
-  <h2>Localização</h2>
-  <div class="landing-info">
-    <p class="landing-text">O Laboratório está localizado no bloco 26 da Universidade Federal do Oeste do Pará,
-      Campus Santarém,
-      na Unidade Tapajós - Av. Vera Paz, s/n, 68035110
-    </p>
+  <div class="section-content">
+    <div>
+      <h2>Localização</h2>
+      <p class="landing-text">Está localizado no bloco 26 da Universidade Federal do Oeste do Pará,
+        Campus Santarém,
+        na Unidade Tapajós - Av. Vera Paz, s/n, 68035110
+      </p>
+    </div>
 
     <iframe class="map"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.2598273836006!2d-54.74187808478422!3d-2.420061538597383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9288f9df3099584d%3A0x8468ff1e8ffd2eae!2sLabMC%20-%20UFOPA!5e0!3m2!1spt-BR!2sbr!4v1672081050391!5m2!1spt-BR!2sbr"
       allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </section>
+
+<footer>
+  <div class="footer-content">
+    <img src="/images/logo.png" alt="Logo Labmc" class="logo">
+    <div>
+      <div class="social-container">
+        <i data-feather="mail"></i>
+        labmc.ufopa@gmail.com
+      </div>
+
+      <div class="social-container">
+        <i data-feather="phone"></i>
+        (93) 2101-4947/2101-4912
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-mention">
+    <p>2022 LabMc</p>
+    <p>Desenvolvido por Yasmin Braga e Josecley Góes</p>
+  </div>
+</footer>
 @endsection
