--- a/resources/views/landingpage/home.edge
+++ b/resources/views/landingpage/home.edge
@@ -62,7 +62,7 @@
   </div>
 </section>
 
-<footer>
+<footer class="landing-footer">
   <div class="footer-content">
     <img src="/images/logo.png" alt="Logo Labmc" class="logo">
     <div>
