--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,7 +1,7 @@
 <header class="main-header">
-  <h3>header</h3>
+  <h4>{{title ?? 'LabMC'}}</h4>
 
   <button id="show-sidebar">
-    <i data-feather="menu"></i>
+    <i data-feather="menu" class="feather-green"></i>
   </button>
 </header>
