add crud auth users

--- a/resources/views/landingpage/partials/header.edge
+++ b/resources/views/landingpage/partials/header.edge
@@ -1,5 +1,7 @@
 <header class="landing-header">
-  <img src="/images/logo.png" alt="Logo Labmc" class="logo">
+  <a href="{{route('/')}}">
+    <img src="/images/logo.png" alt="Logo Labmc" class="logo">
+  </a>
   <section class="links">
     <div class="menu">
       <ul>
