--- a/resources/views/orientation/edit.edge
+++ b/resources/views/orientation/edit.edge
@@ -9,7 +9,7 @@
 
   <form action="{{ route('OrientationsController.update', {id: orientation.id}) }}?_method=PUT" method="post">
     @include('orientation/fields')
-    <button>Salvar</button>
+    <button class="btn">Salvar</button>
   </form>
 </div>
 @end
