--- a/resources/views/orientation/index.edge
+++ b/resources/views/orientation/index.edge
@@ -3,6 +3,9 @@
 @set('title', 'Orientações')
 
 @section('main')
+<section class="action-section">
+  <a class="btn primary-link" href="{{route('/users/create')}}">Novo trabalho</a>
+</section>
 <table>
   <thead class="table-head">
     <tr>
