--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,8 +29,8 @@ main.container {
 
 .main-content {
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: 1.5rem;
 }
 
@@ -129,14 +129,26 @@ main.login-container {
   color: #f9f9f9;
   font-size: 14px;
   font-weight: 600;
-  transition: all 0.2s;
   cursor: pointer;
   transition: all 0.2s;
   margin-top: 0.5rem;
+  text-decoration: none;
+}
+
+.primary-link {
+  width: fit-content;
 }
 
 .btn:hover {
   opacity: 0.9;
+}
+
+.action-section {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-bottom: 1rem;
 }
 
 /* SIDEBAR */
@@ -173,7 +185,9 @@ section.content {
   width: 100%;
   max-width: 400px;
   padding: 2rem;
-  margin: 2rem;
+
+  display: flex;
+  flex-direction: column;
 }
 
 /* NAVBAR */
@@ -210,8 +224,8 @@ nav.sidebar-links a {
 }
 
 nav.sidebar-links a.highlight {
-  background-color: #c5edac;
-  color: #045603;
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
 nav.sidebar-links a:hover {
@@ -242,6 +256,30 @@ nav.sidebar-links a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.footer-actions {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 0.5rem;
+  justify-content: flex-end;
+}
+
+a.account {
+  background-color: var(--light-gray);
+  color: #46444c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  transition: all 0.3s;
+  border: 1px solid transparent;
+}
+
+a.account:hover {
+  border: 1px solid #464646;
 }
 
 .logout-button {
@@ -631,7 +669,6 @@ th,
 td {
   padding: 0.75rem;
   border-collapse: collapse;
-  text-transform: capitalize;
 }
 
 table thead {
