--- a/resources/views/orientation/create.edge
+++ b/resources/views/orientation/create.edge
@@ -9,7 +9,7 @@
 
   <form action="{{ route('OrientationsController.store') }}" method="post">
     @include('orientation/fields')
-    <button>Salvar</button>
+    <button class="btn">Salvar</button>
   </form>
 </div>
 @end
