--- a/resources/views/partials/sidebar.edge
+++ b/resources/views/partials/sidebar.edge
@@ -10,7 +10,7 @@
   <nav class="sidebar-links">
     <a href="{{route('/members')}}" class="nav-link">
       <i data-feather="users" class="feather-16"></i>
-      Time
+      Membros
     </a>
     <a href="{{route('/orientations')}}" class="nav-link">
       <i data-feather="file-text" class="feather-16"></i>
