--- a/resources/views/landingpage/home.edge
+++ b/resources/views/landingpage/home.edge
@@ -79,8 +79,9 @@
   </div>
 
   <div class="footer-mention">
-    <p>2022 LabMc</p>
-    <p>Desenvolvido por Yasmin Braga e Josecley Góes</p>
+    <p>&copy 2022 LabMc</p>
+    <p>Desenvolvido por <a href="https://github.com/yasminbraga" class="footer-link">Yasmin Braga</a> e Josecley Góes
+    </p>
   </div>
 </footer>
 @endsection
